<resources>
    <string name="resources_language">en</string>
    <string name="resources_country_code">US</string>
    <string name="resources_script">Latn</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="black_them">Black Theme</string>
    <string name="status_theme">Status.im Theme</string>
    <string name="notification_sync_init">Initializing service</string>
    <string name="notification_sync_in_progress">Synchronising…</string>
    <string name="notification_listening_for_events">Listening for events</string>
    <string name="notification_noisy_notifications">Noisy notifications</string>
    <string name="notification_silent_notifications">Silent notifications</string>
    <string name="title_activity_home">Messages</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_member_details">Member Details</string>
    <string name="title_activity_historical">Historical</string>
    <string name="title_activity_bug_report">Bug report</string>
    <string name="title_activity_group_details">Community details</string>
    <string name="title_activity_choose_sticker">Send a sticker</string>
    <string name="title_activity_keys_backup_setup">Key Backup</string>
    <string name="title_activity_keys_backup_restore">Use Key Backup</string>
    <string name="title_activity_verify_device">Verify device</string>
    <string name="keys_backup_is_not_finished_please_wait">Keys backup is not finished, please wait…</string>
    <string name="sign_out_bottom_sheet_warning_no_backup">You’ll lose your encrypted messages if you sign out now</string>
    <string name="sign_out_bottom_sheet_warning_backing_up">Key backup in progress. If you sign out now you’ll lose access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_warning_backup_not_active">Secure Key Backup should be active on all of your devices to avoid losing access to your encrypted messages.</string>
    <string name="sign_out_bottom_sheet_dont_want_secure_messages">I don’t want my encrypted messages</string>
    <string name="sign_out_bottom_sheet_backing_up_keys">Backing up keys…</string>
    <string name="keys_backup_activate">Use Key Backup</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="backup">Back up</string>
    <string name="sign_out_bottom_sheet_will_lose_secure_messages">You’ll lose access to your encrypted messages unless you back up your keys before signing out.</string>
    <string name="dialog_title_third_party_licences">Third party licences</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="send">Send</string>
    <string name="favourite">Favourite</string>
    <string name="copy">Copy</string>
    <string name="resend">Resend</string>
    <string name="redact">Remove</string>
    <string name="redact_prompt">Are you sure you want to remove this message?</string>
    <string name="quote">Quote</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="speak">Speak</string>
    <string name="clear">Clear</string>
    <string name="later">Later</string>
    <string name="forward">Forward</string>
    <string name="permalink">Permalink</string>
    <string name="view_source">View Source</string>
    <string name="view_decrypted_source">View Decrypted Source</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="none">None</string>
    <string name="revoke">Revoke</string>
    <string name="disconnect">Disconnect</string>
    <string name="report_content">Report content</string>
    <string name="active_call">Active call</string>
    <string name="ongoing_conference_call">Ongoing conference call.\nJoin as %1$s or %2$s</string>
    <string name="ongoing_conference_call_voice">Voice</string>
    <string name="ongoing_conference_call_video">Video</string>
    <string name="cannot_start_call">Cannot start the call, please try later</string>
    <string name="missing_permissions_warning">"Due to missing permissions, some features may be missing…</string>
    <string name="missing_permissions_error">"Due to missing permissions, this action is not possible.</string>
    <string name="missing_permissions_to_start_conf_call">You need permission to invite to start a conference in this room</string>
    <string name="missing_permissions_title_to_start_conf_call">Cannot start call</string>
    <string name="device_information">Device information</string>
    <string name="room_no_conference_call_in_encrypted_rooms">Conference calls are not supported in encrypted rooms</string>
    <string name="call_anyway">Call Anyway</string>
    <string name="send_anyway">Send Anyway</string>
    <string name="or">or</string>
    <string name="invite">Invite</string>
    <string name="offline">Offline</string>
    <string name="accept">Accept</string>
    <string name="add">Add</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="abort">Abort</string>
    <string name="ignore">Ignore</string>
    <string name="review">Review</string>
    <string name="decline">Decline</string>
    <string name="action_exit">Exit</string>
    <string name="actions">Actions</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_out_confirmation_simple">Are you sure you want to sign out?</string>
    <string name="action_sign_out_confirmation">For security, logging out will delete any end-to-end encryption keys making previous encrypted chat history unreadable if you log back in.\nSelect export to backup them before signing out.</string>
    <string name="action_voice_call">Voice Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="action_global_search">Global search</string>
    <string name="action_mark_all_as_read">Mark all as read</string>
    <string name="action_historical">Historical</string>
    <string name="action_quick_reply">Quick reply</string>
    <string name="action_mark_room_read">Mark as read</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="disable">Disable</string>
    <string name="action_edit_contact_form">Edit contact form</string>
    <string name="action_forbidden">You are not authorized to perform this action</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_error">Error</string>
    <string name="bottom_action_home">Home</string>
    <string name="bottom_action_favourites">Favourites</string>
    <string name="bottom_action_people">People</string>
    <string name="bottom_action_rooms">Rooms</string>
    <string name="bottom_action_groups">Communities</string>
    <string name="home_filter_placeholder_home">Filter room names</string>
    <string name="home_filter_placeholder_favorites">Filter favourites</string>
    <string name="home_filter_placeholder_people">Filter people</string>
    <string name="home_filter_placeholder_rooms">Filter room names</string>
    <string name="home_filter_placeholder_groups">Filter community names</string>
    <string name="invitations_header">Invites</string>
    <string name="low_priority_header">Low priority</string>
    <string name="system_alerts_header">"System Alerts"</string>
    <string name="direct_chats_header">Conversations</string>
    <string name="local_address_book_header">Local address book</string>
    <string name="user_directory_header">User directory</string>
    <string name="matrix_only_filter">Matrix contacts only</string>
    <string name="no_conversation_placeholder">No conversations</string>
    <string name="no_contact_access_placeholder">You didn’t allow Tchap to access your local contacts</string>
    <string name="no_result_placeholder">No results</string>
    <string name="no_email">Email unknown</string>
    <string name="people_no_identity_server">No identity server configured.</string>
    <string name="rooms_header">Rooms</string>
    <string name="rooms_directory_header">Room directory</string>
    <string name="no_room_placeholder">No rooms</string>
    <string name="no_public_room_placeholder">No forum available</string>
    <plurals name="public_room_nb_users">
        <item quantity="one">1 user</item>
        <item quantity="other">%d users</item>
    </plurals>
    <string name="groups_invite_header">Invite</string>
    <string name="groups_header">Communities</string>
    <string name="no_group_placeholder">No groups</string>
    <string name="send_bug_report_include_logs">Send logs</string>
    <string name="send_bug_report_include_crash_logs">Send crash logs</string>
    <string name="send_bug_report_include_screenshot">Send screenshot</string>
    <string name="send_bug_report">Report bug</string>
    <string name="hs_url">Home Server URL</string>
    <string name="identity_url">Identity Server URL</string>
    <string name="auth_email_placeholder">Email address</string>
    <string name="auth_use_server_options">Use custom server options (advanced)</string>
    <string name="auth_home_server">Home Server:</string>
    <string name="auth_identity_server">Identity Server:</string>
    <string name="room_sliding_menu_settings">Settings</string>
    <string name="room_sliding_menu_term_and_conditions">Terms &amp; conditions</string>
    <string name="room_settings_room_photo">Room Photo</string>
    <string name="room_settings_room_name">Room Name</string>
    <string name="room_settings_topic">Topic</string>
    <string name="room_settings_room_notifications_title">Notifications</string>
    <string name="room_settings_banned_users_title">Banned users</string>
    <string name="tchap_burger_menu_contacts">Contacts</string>
    <string name="tchap_burger_menu_public_rooms">Forums</string>
    <string name="tchap_room_settings_remove_from_directory">Remove this room from the forums directory</string>
    <string name="tchap_room_settings_room_access_title">External accounts handling</string>
    <string name="tchap_room_settings_room_access_restricted">The externals are not allowed to join this room</string>
    <string name="tchap_unsupported_android_version_title">For security reasons, Tchap is not supported anymore on Android 4.4.4 and lower</string>
    <string name="tchap_unsupported_android_version_message">Please log out your account from this device.\nIn order to be able to decrypt your chat history when you will log in from another device, we invite you to export your encryption keys before signing out.</string>
    <string name="tchap_unsupported_android_version_export_keys">Export keys</string>
    <string name="tchap_connection_email">Email</string>
    <string name="tchap_connection_password">Tchap password</string>
    <string name="tchap_connection_forgotten_email">I have forgotten my password</string>
    <string name="an_update_is_available_mandatory">A new version is available, please update your application</string>
    <string name="an_update_is_available_upgrade_help">If your professional phone does not allow access to the PlayStore, please use the dedicated private application store to upgrade Tchap.</string>
    <string name="an_update_is_available_upgrade_button">Open the PlayStore</string>
    <string name="an_update_is_available_later">Later</string>
</resources>