<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- this section has no title in purpose -->
    <fr.gouv.tchap.preference.TchapRoomAvatarPreference
        android:key="roomPhotoAvatar"
        android:title="@string/room_settings_room_photo" />

    <EditTextPreference
        android:focusable="true"
        android:key="roomNameEditText"
        android:title="@string/room_settings_room_name" />

    <EditTextPreference
        android:focusable="true"
        android:key="roomTopicEditText"
        android:title="@string/room_settings_topic" />

    <!-- the notification rule selection -->
    <ListPreference
        android:entries="@array/notification_entries"
        android:entryValues="@array/notification_values"
        android:key="roomNotificationPreference"
        android:summary="%s"
        android:title="@string/room_settings_room_notifications_title" />

    <im.vector.preference.VectorCustomActionEditTextPreference
        android:key="roomLeave"
        android:title="@string/leave" />

    <!-- a public room may become private -->
    <im.vector.preference.VectorCustomActionEditTextPreference
        android:key="removeFromRoomsDirectory"
        android:title="@string/tchap_room_settings_remove_from_directory" />

    <!-- the current room access rule (a restricted room may become unrestrictive) -->
    <im.vector.preference.VectorCustomActionEditTextPreference
        android:key="roomAccessRule"
        android:title="@string/tchap_room_settings_room_access_title"
        android:summary="@string/tchap_room_settings_room_access_restricted"/>

    <!--im.vector.preference.VectorDividerCategory /-->

    <!-- no addresses section in tchap at this step of the product
    <im.vector.preference.VectorPreferenceCategory
        android:key="addresses"
        android:title="@string/room_settings_addresses_pref_title">

    </im.vector.preference.VectorPreferenceCategory>
    -->

    <!--im.vector.preference.VectorDividerCategory android:key="flair_divider" />

    <im.vector.preference.VectorPreferenceCategory
        android:key="flair"
        android:title="@string/settings_flair" /-->

    <im.vector.preference.VectorDividerCategory android:key="banned_divider" />

    <im.vector.preference.VectorPreferenceCategory
        android:key="banned"
        android:title="@string/room_settings_banned_users_title" />

    <!--im.vector.preference.VectorDividerCategory /-->

    <!-- no addresses section in tchap at this step of the product
    <im.vector.preference.VectorPreferenceCategory
        android:key="advanced"
        android:title="@string/room_settings_category_advanced_title">

        <im.vector.preference.VectorCustomActionEditTextPreference
            android:key="roomInternalId"
            android:title="@string/room_settings_room_internal_id" />

        <im.vector.preference.VectorSwitchPreference
            android:key="@string/room_settings_never_send_to_unverified_devices_title"
            android:summary="@string/room_settings_never_send_to_unverified_devices_summary"
            android:title="@string/room_settings_never_send_to_unverified_devices_title" />

    </im.vector.preference.VectorPreferenceCategory>
    -->

</PreferenceScreen>