<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo_tchap_color" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/tchap_unsupported_android_version_title"
                android:textColor="@color/tchap_primary_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/tchap_unsupported_android_version_message"
                android:textColor="@color/tchap_primary_text_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="20dp"
                android:background="?attr/colorAccent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/action_sign_out"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/export_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="?attr/colorAccent"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/tchap_unsupported_android_version_export_keys"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/waiting_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?vctr_waiting_background_color"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="gone">

        <ProgressBar
            android:id="@+id/waiting_progress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</merge>