<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Vector.ActionBarTheme.TchapLogin" />

    <!-- the main body is defined in a scroll view to avoid split items -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/fragment_tchap_first_register" />

            <include layout="@layout/fragment_tchap_first_login" />

            <include layout="@layout/fragment_tchap_first_forgotten_password" />

            <include layout="@layout/fragment_tchap_message_button" />

            <LinearLayout
                android:id="@+id/main_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="19dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/three_pid_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/auth_add_email_phone_message"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/registration_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:hint="@string/auth_email_placeholder"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/homeserver_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/display_server_url_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/display_server_url_expand_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_toRightOf="@+id/display_server_url_expand_checkbox"
                            android:gravity="center_vertical"
                            android:text="@string/auth_use_server_options" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/login_matrix_server_options_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/auth_home_server" />

                        <EditText
                            android:id="@+id/login_matrix_server_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hs_url"
                            android:inputType="text"
                            android:maxLines="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/auth_identity_server" />

                        <EditText
                            android:id="@+id/login_identity_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/identity_url"
                            android:inputType="text"
                            android:maxLines="1" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/flow_progress_message_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="A text here"
                android:textSize="16sp"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/fragment_tchap_first_welcome" />

    <include
        layout="@layout/fragment_tchap_first_register_wait_for_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />

    <!-- flow mask view: to be displayed above the entire screen -->
    <RelativeLayout
        android:id="@+id/flow_ui_mask_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/search_progress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>

