<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_tchap_first_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="22dp"
    android:paddingLeft="22dp"
    android:paddingRight="22dp"
    android:paddingStart="22dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tchap_first_login_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/tchap_text_color_light"
        app:hintTextAppearance="@style/TchapTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tchap_first_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tchap_connection_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/tchap_text_color_light"
            android:textSize="16sp"
            tools:text="manu@gouv.fr" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tchap_first_login_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColorHint="@color/tchap_text_color_light"
        app:hintTextAppearance="@style/TchapTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tchap_first_login_email_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tchap_first_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tchap_connection_password"
            android:inputType="textPassword"
            android:textColor="@color/tchap_text_color_light"
            android:textSize="16sp"
            tools:text="password" />

    </android.support.design.widget.TextInputLayout>

    <!-- This is disabled for the moment -->
    <TextView
        android:id="@+id/tchap_first_login_password_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/tchap_connection_forgotten_email"
        android:textColor="@color/tchap_text_color_light"
        android:textSize="13.5sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tchap_first_login_password_layout" />

</android.support.constraint.ConstraintLayout>